@@ -3,6 +3,7 @@ package grafioschtrader.connector.instrument.yahoo;
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 
 import org.slf4j.Logger;
@@ -13,13 +14,13 @@ import grafioschtrader.GlobalConstants;
 public class CrumbManager {
 
   private final static Logger log = LoggerFactory.getLogger(CrumbManager.class);
-  
+
   public static String crumb = null;
   public static String cookie = null;
-  
+
   private static void setCookie() {
     try {
-      URL url = new URL("https://fc.yahoo.com");
+      URL url = new URI("https://fc.yahoo.com").toURL();
       HttpURLConnection connection = (HttpURLConnection) url.openConnection();
       // Get the cookie from the response headers
       cookie = connection.getHeaderField("Set-Cookie");
@@ -31,9 +32,9 @@ public class CrumbManager {
 
   private static void setCrumb() {
     StringBuilder response = new StringBuilder();
-    
+
     try {
-      URL url = new URL("https://query2.finance.yahoo.com/v1/test/getcrumb");
+      URL url = new URI("https://query2.finance.yahoo.com/v1/test/getcrumb").toURL();
       HttpURLConnection connection = (HttpURLConnection) url.openConnection();
       // Set the cookie
       connection.setRequestProperty("Cookie", cookie);
@@ -52,28 +53,27 @@ public class CrumbManager {
     } catch (Exception e) {
       log.debug("Failed to set crumb from http request. Intraday quote requests will most likely fail.", e);
     }
-    crumb = response.toString();     
+    crumb = response.toString();
   }
 
   public static synchronized void resetCookieCrumb() {
     setCookie();
     setCrumb();
   }
-  
-  
+
   public static synchronized String getCookie() {
-    if(cookie == null || cookie.isEmpty()) {
-       resetCookieCrumb();
+    if (cookie == null || cookie.isEmpty()) {
+      resetCookieCrumb();
     }
     return cookie;
   }
-  
+
   public static synchronized String getCrumb() {
-    if(crumb == null || crumb.isBlank()) {
-       resetCookieCrumb();
+    if (crumb == null || crumb.isBlank()) {
+      resetCookieCrumb();
     }
     return crumb;
-    
+
   }
-  
+
 }
